# mahler-rs

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  repo.yml
.versionbot/: CHANGELOG.yml
examples/: run-tests.sh
examples/composer/: Cargo.toml  README.md
examples/composer/src/: lib.rs
examples/readme/: Cargo.toml
examples/readme/src/: main.rs
examples/readme/tests/: cli.rs
mahler/: Cargo.toml
mahler-core/: Cargo.toml  README.md
mahler-core/src/: dag.rs  error.rs  errors.rs  lib.rs  result.rs  serde.rs  state.rs
mahler-core/src/extract/: mod.rs  path.rs  res.rs  system.rs  target.rs  view.rs
mahler-core/src/extract/args/: de.rs  mod.rs
mahler-core/src/json/: mod.rs  operation.rs  patch.rs  path.rs  value.rs
mahler-core/src/planner/: distance.rs  domain.rs  mod.rs
mahler-core/src/runtime/: channel.rs  context.rs  from_context.rs  from_system.rs  id.rs  mod.rs  resources.rs  system.rs
mahler-core/src/state/: collections.rs  mod.rs
mahler-core/src/sync/: channel.rs  interrupt.rs  mod.rs  rwlock.rs
mahler-core/src/task/: context.rs  description.rs  effect.rs  errors.rs  handler.rs  into_result.rs  io.rs  job.rs  mod.rs
mahler-core/src/worker/: mod.rs  testing.rs
mahler-core/src/worker/planner/: distance.rs  mod.rs
mahler-core/src/workflow/: aggregate_error.rs  channel.rs  dag.rs  mod.rs
mahler-derive/: Cargo.toml  README.md
mahler-derive/src/: lib.rs
mahler/src/: description.rs  job.rs  lib.rs  sensor.rs  system_ext.rs
mahler/src/exception/: handler.rs  mod.rs
mahler/src/extract/: mod.rs  path.rs  res.rs  system.rs  target.rs  view.rs
mahler/src/extract/args/: de.rs  error.rs  mod.rs
mahler/src/task/: description.rs  effect.rs  handler.rs  id.rs  into_result.rs  io.rs  job.rs  mod.rs
mahler/src/worker/: auto_interrupt.rs  domain.rs  mod.rs  runtime.rs  testing.rs  workflow.rs
mahler/src/worker/planner/: candidate.rs  distance.rs  mod.rs  path_utils.rs  search.rs  task_workflow.rs  tests.rs
mahler/tests/: state_derive.rs  state_metadata.rs
src/: ack_channel.rs  dag.rs  error.rs  errors.rs  lib.rs  path.rs  state.rs  system.rs  workflow.rs
src/context/: mod.rs  target.rs
src/db/: entity.rs  mod.rs  resource.rs  traits.rs
src/entity/: mod.rs  read.rs  target.rs  update.rs
src/extract/: errors.rs  mod.rs  path.rs  res.rs  state.rs  system.rs  target.rs  view.rs
src/extract/args/: de.rs  error.rs  mod.rs
src/extract/path/: de.rs  error.rs  mod.rs
src/planner/: distance.rs  domain.rs  mod.rs
src/resource/: mod.rs  read.rs  target.rs  update.rs
src/state/: index.rs  mod.rs
src/system/: context.rs  from_system.rs  indexable.rs  into_patch.rs  mod.rs  system_reader.rs  system_writer.rs
src/task/: action.rs  boxed.rs  condition_failed.rs  context.rs  description.rs  domain.rs  effect.rs  errors.rs  from_system.rs  handler.rs  intent.rs  into_result.rs  io.rs  job.rs  method.rs  mod.rs  outcome.rs  result.rs  with_io.rs
src/task/action/: effect.rs  handler.rs  mod.rs
src/worker/: distance.rs  domain.rs  intent.rs  logging.rs  mod.rs  planner.rs  target.rs  testing.rs  workflow.rs
src/workflow/: aggregate_error.rs  channel.rs  dag.rs  interrupt.rs  mod.rs
tests/: library_test.rs
