[workspace]
members = [ "mahler", "mahler-core", "mahler-derive" ]
resolver = "2"

[workspace.package]
version = "0.25.1"
edition = "2021"
homepage = "https://github.com/balena-io-modules/mahler-rs"
repository = "https://github.com/balena-io-modules/mahler-rs"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.81"

[workspace.dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
json-patch = "4.1.0"
jsonptr = "0.7.1"
serde_json = "1.0.145"
tracing = "0.1.44"

[workspace.dependencies.matchit]
version = "0.8.4"

[workspace.dependencies.serde_core]
version = "1.0.228"
default-features = false

[workspace.dependencies.tokio]
version = "1.48.0"
default-features = false
features = [ "rt", "sync", "macros" ]

[workspace.dependencies.tokio-stream]
version = "0.1.17"
default-features = false
features = [ "sync" ]
