[package]
name = "mahler-core"
description = "An automated job orchestration library that builds and executes dynamic workflows"
keywords = ["job", "orchestration", "workflow", "library"]
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
json-patch = "4.1.0"
jsonptr = "0.7.1"
# FIXME: this needs bumping once the fix in https://github.com/ibraheemdev/matchit/pull/76 
# makes it to a new release
matchit = { version = "0.8.4" }
serde = "1.0.197"
serde_json = "1.0.120"
tokio = { version = "1.48.0", default-features = false, features = [
  "rt",
  "sync",
  "macros",
] }
tracing = "0.1.43"
tokio-stream = { version = "0.1.17", default-features = false, features = [
  "sync",
] }
async-trait = "0.1.89"
futures = "0.3.31"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "ansi",
  "registry",
  "fmt",
  "env-filter",
] }
dedent = "0.1.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "time"] }
pretty_assertions = "1.4.1"
tokio-test = "0.4.4"
thiserror = "2"

# Used to compile documentation 
mahler = { path = "../mahler" }
