[package]
name = "mahler-core"
description = "An automated job orchestration library that builds and executes dynamic workflows"
keywords = ["job", "orchestration", "workflow", "library"]
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
async-trait.workspace = true
futures.workspace = true
json-patch.workspace = true
jsonptr.workspace = true
matchit.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [] }

[dev-dependencies]
dedent = "0.1.1"
pretty_assertions = "1.4.1"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "ansi",
  "registry",
  "fmt",
  "env-filter",
] }
tokio-test = "0.4.4"

# Used to compile documentation 
mahler = { path = "../mahler" }
