[package]
name = "composer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bollard = { version = "0.18.1" }
futures-util = { version = "0.3.31", default-features = false }
gustav = { path = "../../", features = ["logging"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", default-features = false, features = [
  "rt-multi-thread",
] }
tracing-subscriber = "0.3.19"
