[package]
name = "mahler-examples-composer"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.98"
bollard = { version = "0.18.1" }
futures-util = { version = "0.3.31", default-features = false }
mahler = { path = "../../", features = ["logging"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", default-features = false, features = [
  "rt-multi-thread",
] }
tracing-subscriber = { version = "0.3.19", features = ["registry"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "ansi",
  "env-filter",
  "fmt",
] }
