[package]
name = "mahler-examples-readme"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
mahler = { path = "../../", features = ["logging"] }
serde = "1.0.219"
tokio = { version = "1.44.2", default-features = false, features = [
  "rt-multi-thread",
  "time",
] }
