[package]
name = "mahler-examples-readme"
version = "0.0.0"
edition = "2021"
publish = false

# do not inherit the workspace from the top-level folder
[workspace]

[dependencies]
mahler = { path = "../../mahler" }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "fmt",
  "env-filter",
  "ansi",
  "json",
] }
serde = "1.0.219"
tokio = { version = "1.44.2", default-features = false, features = [
  "rt-multi-thread",
  "time",
] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
